--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-translate",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lovkachdev.github.io/react-translate/",
+  "homepage": "https://lovkachdev.github.io/reactjs-translate/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
