--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-translate",
+  "name": "reactjs-translate",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://lovkachdev.github.io/reactjs-translate/",
